Mise en place docker

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,10 @@
-name: project-name
+name: project-comm
 
 services:
   ###> doctrine/doctrine-bundle ###
   database:
     image: bitnami/mariadb:10.6.19
-    container_name: project-database
+    container_name: project-database_1
     environment:
       - MARIADB_ROOT_PASSWORD=${MARIADB_ROOT_PASSWORD:-root_password}
       - MARIADB_USER=${MARIADB_USER:-app}
@@ -15,15 +15,15 @@ services:
     networks:
       - project_network
     ports:
-      - 3306:3306
+      - 3307:3307
     restart: unless-stopped
   ###< doctrine/doctrine-bundle ###
 
   phpmyadmin:
     image: phpmyadmin:5.2.1
-    container_name: project-phpmyadmin
+    container_name: project-phpmyadmin_1
     ports:
-      - 8080:80
+      - 8081:80
     environment:
       - PMA_ARBITRARY=1
       - PMA_HOST=database
@@ -39,7 +39,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    container_name: project-apache
+    container_name: project-apache_1
     volumes:
       - .:/var/www/
       - ./docker/apache/apache.conf:/etc/apache2/sites-enabled/000-default.conf
